# OnyX

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  ONYX_STATE.md  README.md  SECURITY.md  check_npm.js  check_output.txt  deps.txt  extract_deps.py  package.json  package.json.bak  pnpm-lock.yaml  pnpm-lock.yaml.679745787  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.agents/: maintainers.md
.github/workflows/: ci.yml
apps/android/: README.md  gradle.properties  local.properties  settings.gradle.kts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/ios/: README.md
apps/macos/: README.md
apps/mobile/: app.config.ts  package.json
apps/swabble/: README.md  (+1 more)
docs/: DEPLOYMENT_URLS.md  SUBMISSION_100XDEVS.md  SUBMISSION_ENCRYPT_IKA.md  SUBMISSION_FRONTIER.md  SUBMISSION_NOSANA_ELIZA.md  SUBMISSION_QVAC.md  SUBMISSION_UMBRA.md
kernel/: alarm-and-abort.d.ts  alarm-and-abort.d.ts.map  alarm-and-abort.js  alarm-and-abort.js.map  alarm-and-abort.ts  boot.ts  constants.d.ts  constants.d.ts.map  constants.js  constants.js.map  constants.ts  executive.ts  fresh-start.ts  package.json  phase-table.d.ts  phase-table.d.ts.map  phase-table.js  phase-table.js.map  phase-table.ts  restart-tables.ts  tsconfig.json  types.d.ts  types.d.ts.map  types.js  types.js.map  types.ts  vitest.config.ts  waitlist.ts
onyx-rl-python/: README.md
scripts/: demo-fhe-vault.ts  demo-ika.ts  demo-umbra.ts
temp_install/: package.json
(+207 files in other folders)
