[package]
name = "onyx-desktop"
version = "0.1.0"
description = "ONYX Desktop — Sovereign AI OS"
authors = ["ONYX"]
edition = "2021"

[lib]
name = "onyx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
